Results almost ok, done with figures

--- a/chapter3.tex
+++ b/chapter3.tex
@@ -54,6 +54,7 @@ Individual sensors are arranged in a 2D CCD array. The response of each individu
 The voltage output by each pixel may be read and quantized by a ADC producing a digital value, usually in the range 0-255 (8-bit).
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Intrinsic and Extrinsic Parameters}
+\label{section:camera_coordinates}
 The world and camera coordinate systems are related by a set of physical parameters. These parameters can be separated into \textit{intrinsic} parameters, which relates the image coordinate system to the normalized coordinate system presented in figure \ref{fig:image_coordinates}, and \textit{extrinsic} parameters, which relate the cameras coordinate system to a fixed world coordinate system and specify its position and orientation in space.
 \begin{figure}[H]
     \centering
