--- a/docsetup.tex
+++ b/docsetup.tex
@@ -10,6 +10,8 @@
 \usepackage{subcaption}
 \usepackage{listings}
 \usepackage{interval}
+\usepackage{colortbl}
+\usepackage{booktabs}
 \usepackage[Lenny]{fncychap}
 \usepackage[pdftex,bookmarks=true]{hyperref}
 \usepackage[pdftex]{hyperref}
