--- a/chapter5.tex
+++ b/chapter5.tex
@@ -37,5 +37,22 @@ The boat is shown in figure \ref{fig:boat} (the blue boat). The relative small s
 	\label{fig:boat}
 \end{figure}
 \section{Performed Maneuvers}
-In order to be able to compare detections in images with data from the lidar, and to gain insight into how well image detections of the boat corresponds to detections in the lidar point cloud, a series of maneuvers with different geometries were performed in the river around the sensor placement.
+In order to be able to compare detections in images with data from the lidar, and to gain insight into how well image detections of the boat corresponds to detections in the lidar point cloud, a series of maneuvers with different geometries were performed in the river around the sensor placement. Figure \ref{fig:experiments} illustrates the recorded maneuvers.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=.8\linewidth]{fig/experiments_performed.png}
+	\caption{The recorded maneuvers overlaid a satellite image of Ravnkloa. Satellite image taken from Google maps.}
+	\label{fig:experiments}
+\end{figure}
+The maneuvers, with reference to the indices in figure \ref{fig:experiments}, were:
+\begin{enumerate}
+	\item Boat arriving head on, at approximately 1.5 meters/second. Analysing detections for a vessel arriving head on is interesting from a collision detection and avoidance perspective.
+	\item Boat arriving head on, but from an angle relative to the center of the camera field of view. Speed approximately 1.5 meters/second.
+	\item Boat crossing in front of sensors, passing at a distance of 25 to 15 meters. Speed approximately 1 meter/second.
+	\item Boat crossing in front of sensors, passing at a distance of 25 to 45 meters. Speed approximately 1.5 meters/second.
+	\item Boat crossing in front of sensors, passing at a distance of 45 to 25 meters. Speed approximately 2.5 meters/second. The increased speed was an attempt to generate wakes, in order to analyse the effects of wakes in the lidar data. The imposed speed limit on the Nidelven river is 5 knots, or 2.57 meters/second, this pass was close to the legal speed limit on the river.
+	\item Boat crossing in front of sensors, passing at a distance of 45 to 65 meters. Speed approximately 1 meter/second.
+	\item Boat driving in circles in front of sensors, with a radius of approximately 10 meters, centered at a distance of 25 meters from the sensors. This provides a full 360$\degree$ view of the boat.
+\end{enumerate}
+For all experiments, lidar data was stored as a point cloud with a update frequency of 10 Hz, images was stored at a frame rate of 25 Hz, sensor rig GNSS position was stored at a frequency of 4 Hz, and target GNSS position, speed over ground and course over ground for the boat was stored at a frequency of 1 Hz. The GNSS position, speed and course over ground for the target was however not stored successfully, due to unknown errors. The system for gathering the data streamed via a mobile phone was tested beforehand, but it has become apparent that this testing was not sufficient. Since no positional data was produced for the target boat, no position ground truth for the experiments was generated.
 \cleardoublepage
